Local space transform move is broken in orthographic view along x-axis #101196

Closed
opened 2022-09-19 20:25:00 +02:00 by Mike · 6 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.59

Blender Version
Broken: version: 3.3.0, branch: master, commit date: 2022-09-06 15:39, hash: 0759f671ce
Worked: Perhaps never? (2.93 is affected too)

Short description of error
Move Object in Local space in special conditions in Orthographic view is broken - random movements in X axis...
If I not using Orthographic view - it's working Ok! also if object ratated on different angles - shifting in X axis is also changes it's strength...

Exact steps for others to reproduce the error

  1. Launch Blender.
  2. Create an object.
  3. Goto Right Orthographic view
  4. Rotate object by 10 dergees CW
  5. Select Move Tool
  6. Select Transform Orientation - Local
  7. Move the object with the red handle (Object moves in X direction at random distances...)
    2022-09-19 19-56-42.mp4

P.S.: Few times after objects was shifted like that and then I tried to use snapping - Blender just crashed. But I can't find proper and repeatable conditions to always reproduce this crash.

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.59 **Blender Version** Broken: version: 3.3.0, branch: master, commit date: 2022-09-06 15:39, hash: `0759f671ce` Worked: Perhaps never? (2.93 is affected too) **Short description of error** Move Object in Local space in special conditions in Orthographic view is broken - random movements in X axis... If I not using Orthographic view - it's working Ok! also if object ratated on different angles - shifting in X axis is also changes it's strength... **Exact steps for others to reproduce the error** 1) Launch Blender. 2) Create an object. 3) Goto Right Orthographic view 4) Rotate object by 10 dergees CW 5) Select Move Tool 6) Select Transform Orientation - Local 7) Move the object with the red handle (Object moves in X direction at random distances...) [2022-09-19 19-56-42.mp4](https://archive.blender.org/developer/F13517781/2022-09-19_19-56-42.mp4) P.S.: Few times after objects was shifted like that and then I tried to use snapping - Blender just crashed. But I can't find proper and repeatable conditions to always reproduce this crash.

Added subscriber: @MikeMS

Added subscriber: @MikeMS
Pratik Borhade changed title from Move Object in Local space in special conditions in Orthographic view is broken - random movements in X axis... to Local space transform move is broken in orthographic view along x-axis 2022-09-20 04:41:37 +02:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123

This issue was referenced by d6d0643265

This issue was referenced by d6d064326549bf89a4d25b3e90a0671b10bbd5af

This issue was referenced by ed6c8d82b8

This issue was referenced by ed6c8d82b804c8c197a5ebeed5cf17a586320d95

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2022-09-20 19:30:15 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#101196
There is no content yet.