Fix T101196: constraint plane failing in side orthographic views

Caused due to an inaccuracy when the values of `in` and `out` are too
close.

The solution is to project the value of `in` directly onto the plane.